...
            OutlinedTextField(
                value = inputText,
                onValueChange = { inputText = it },
                placeholder = { Text("Enter a task")},
                modifier = Modifier
                    .weight(1f)
                    .testTag("input_field"),
                singleLine = true
            )

            Spacer(Modifier.width(8.dp))

            Button(
                onClick = {
                    viewModel.addTask(title=inputText)
                    inputText = ""
                }, // end of onclick
                modifier = Modifier.testTag("add_button")
                ){
                Text("Add")
            }// end of button
        }// end of row

        Spacer(modifier = Modifier.height(16.dp))
...
